# PyGMI

./: .gitignore  README.md  example_conf.yml  nerf.ipynb  neurgeomtool.txt  requirements.txt  setup.cfg  setup.py
examples/: encode_faust_sdf.py  nerf_reconstruction.py  surface_reconstruction.py
ngt/data/: dataset.py
ngt/data/dataset/: __init__.py  core.py  sdf.py
ngt/data/preprocess/: __init__.py  core.py  sdf.py
ngt/data/preprocess/core/: sdf.py
ngt/data/sources/: __init__.py  core.py  misc.py  pyg.py
ngt/nn/: __init__.py  encoder.py  siren.py
ngt/tasks/: __init__.py  core.py  distance_eikonal_ivp.py  distance_regression.py  surf_recon.py  task_base_module.py
ngt/tasks/types/: core.py  sdf.py
ngt/types/: __init__.py  core.py  sdf.py
ngt/utils/: __init__.py  files.py  misc.py
ngt/utils/extract/: __init__.py  core.py  sdf.py
ngt/utils/math/: __init__.py  diffops.py
ngt/utils/visual/: __init__.py  core.py
pygmi/: __init__.py
pygmi/data/dataset/: __init__.py  core.py  sdf.py
pygmi/data/preprocess/: __init__.py  core.py  sdf.py
pygmi/data/sources/: __init__.py  core.py  misc.py  pyg.py
pygmi/nn/: __init__.py  deepsdf.py  encoder.py  nerf.py  siren.py
pygmi/tasks/: __init__.py  core.py  distance_eikonal_ivp.py  distance_regression.py
pygmi/types/: __init__.py  core.py  sdf.py
pygmi/utils/: __init__.py  files.py  misc.py
pygmi/utils/extract/: __init__.py  core.py
pygmi/utils/math/: __init__.py
pygmi/utils/visual/: __init__.py  core.py
