[metadata]
name = pygmi
version = attr: pygmi.__version__.__version__
description = PyGMI - A library for neural implicit geometry
url = https://github.com/daniele-baieri/PyGMI
long_description = file: README.md
author = Daniele Baieri
author_email = daniele.baieri@gmail.com
license = GNU General Public License v3.0

[options]
packages = find:
install_requires = 
    numpy
    torch
    torchvision
    pytorch_lightning
    cgal
    wandb
    scikit-image
    plotly
    trimesh
    typing-extensions; python_version < "3.8"
zip_safe = False

[options.packages.find]
exclude =
    bin*
    tmp*